<resources>
    <string name="app_name">University News Ulm</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_error_something">Something went wrong. Please try again.</string>
    <string name="general_error_database">Database failure. Please try again.</string>
    <string name="general_error_connection_failed">Connection to server failed.</string>
    <string name="general_error_no_connection">No internet connection.</string>
    <string name="general_error_refresh"> Can\'t refresh.</string>
    <string name="general_error_subscribe"> Can\'t subscribe.</string>
    <string name="general_error_unsubscribe"> Can\'t unsubscribe.</string>
    <string name="general_error_leave"> Can\'t leave.</string>
    <string name="general_error_edit"> Can\'t edit.</string>
    <string name="general_error_delete"> Can\'t delete.</string>
    <string name="general_error_vote"> Can\'t vote.</string>
    <string name="general_year_format">YYYY</string>
    <string name="general_create">Create</string>
    <string name="general_dots" translatable="false">&#8230;</string>
    <string name="general_edit">Edit</string>
    <string name="general_delete">Delete</string>
    <string name="general_add">Add</string>
    <string name="general_error_create"> Can\'t create.</string>
    <string name="general_error_input">Invalid fields found.</string>
    <string name="general_error_input_field_invalid">is invalid.</string>
    <string name="general_error_input_field_empty">is empty.</string>
    <string name="general_settings_updated">Settings updated successfully.</string>
    <string name="general_date_pattern_short">HH:mm MM/dd/yy</string>
    <string name="general_date_pattern_long">MM/dd/yyyy HH:mm</string>
    <string name="general_date_pattern_date_only">MM/dd/yyyy</string>
    <string name="general_date_pattern_time_only">HH:mm</string>
    <string name="general_leave_page_title">Leave page</string>
    <string name="general_leave_page">If you leave this page, your entered data is discarded. Do you really
        want to leave?</string>
    <string name="general_leave_page_edited">If you leave this page, your edited data is discarded. Do you really
        want to leave?</string>
    <string name="general_unknown">Unknown</string>
    <string name="general_description">Description</string>
    <string name="general_close">Close</string>
    <string name="general_open">Open</string>
    <string name="general_title">Title</string>
    <string name="general_text">Text</string>
    <string name="general_nobody">Nobody</string>
    <string name="push_message_new_announcement">New announcement posted.</string>
    <string name="push_message_new_announcements">New announcements posted.</string>
    <string name="push_message_channel_deleted">Channel has been deleted.</string>
    <string name="push_message_conversation_changed">Conversations updated.</string>
    <string name="push_message_ballot_changed">Ballots updated.</string>
    <string name="push_message_group_members_changed">Group members updated.</string>
    <string name="push_message_options_changed">Ballot options updated.</string>
    <string name="push_message_new_conversation_message">New message posted.</string>
    <string name="push_message_new_conversation_messages">New messages posted.</string>
    <string name="push_message_conversation">Conversation: %1$s</string>
    <string name="push_message_group">Group: %1$s</string>
    <string name="push_message_ballot">Ballot: %1$s</string>
    <string name="activity_create_account_information">To use this app you need to create a user account. To do that you just have to enter a user name below and accept the terms of use. You can find them on www.google.de</string>
    <string name="activity_create_account_welcome">Welcome to the University News Ulm App!</string>
    <string name="activity_create_account_creating_account">Creating user account&#8230;</string>
    <string name="activity_create_account_checkbox">I accept the terms of use.</string>
    <string name="activity_create_account_button_create">Create account</string>
    <string name="activity_create_account_button_start">Start</string>
    <string name="activity_create_account_button_retry">Retry</string>
    <string name="activity_create_account_account_created">Your user account has been created successfully. The app is
        now loading the channel data. Once finished, click on the appearing start button to use the app.</string>
    <string name="activity_create_account_error_checkbox">You need to accept the terms of use.</string>
    <string name="activity_create_account_error_token">An error occurred while creating your user account. Please try again.</string>
    <string name="activity_create_account_name_hint">User name</string>
    <string name="activity_create_account_error_name_empty">You need to enter a user name.</string>
    <string name="activity_create_account_error_name_invalid">Your user name is invalid. Only use latin characters and numbers.</string>
    <string name="activity_login_title">Moderator login</string>
    <string name="activity_login_info">Use your moderator name and moderator password to login.\nIf you don\'t
        have a moderator account, forgot your password or encounter other problems, please visit the following website
        for further information:\nwww.google.de</string>
    <string name="activity_login_btn_login">Login</string>
    <string name="activity_login_til_name_hint">Moderator name</string>
    <string name="activity_login_til_password_hint">Moderator password</string>
    <string name="activity_login_til_name_invalid">Invalid moderator name</string>
    <string name="activity_login_til_password_invalid">Invalid moderator password</string>
    <string name="activity_login_error_unauthorized">Login failed. The given name-password-combination is invalid.
        </string>
    <string name="activity_login_error_locked">Moderator account is locked.</string>
    <string name="activity_login_error_deleted">Moderator account was deleted.</string>
    <string name="activity_channel_search_title">Search channel</string>
    <string name="activity_channel_search_hint">Channel name</string>
    <string name="activity_channel_search_updating">No channel data found. Swipe down to refresh.</string>
    <string name="activity_group_search_title">Search group</string>
    <string name="activity_group_search_et_hint_id">Group id</string>
    <string name="activity_group_search_et_hint_name">Group name</string>
    <string name="activity_group_search_btn_search">Search Group</string>
    <string name="activity_group_search_tv_search">Search for</string>
    <string name="activity_group_search_rb_id">Group id</string>
    <string name="activity_group_search_rb_name">Group name</string>
    <string name="activity_group_search_chk_tutorial">Tutorial group</string>
    <string name="activity_group_search_chk_work">Working group</string>
    <string name="activity_group_search_error_search_empty">The search field is empty.</string>
    <string name="activity_group_search_error_search_name">This group name is invalid. It may include invalid characters or is to long.</string>
    <string name="activity_group_search_error_search_numbers">This group id is invalid. Use numbers only to search for id.</string>
    <string name="activity_group_search_error_not_found">No group found.</string>
    <string name="activity_group_search_updating">No group data found. Swipe down to refresh.</string>
    <string name="activity_group_add_title">Add group</string>
    <string name="activity_group_edit_title">Edit group</string>
    <string name="activity_ballot_add_title">Add ballot</string>
    <string name="activity_option_add_title">Add ballot option</string>
    <string name="activity_ballot_edit_title">Edit ballot</string>
    <string name="activity_group_members_title">Group members</string>
    <string name="activity_settings_user_title">User settings</string>
    <string name="activity_settings_user_info">Your current user name is %1$s.\nYou can change this name below.</string>
    <string name="activity_settings_user_info_title">User name</string>
    <string name="activity_settings_notification_title">Notification settings</string>
    <string name="activity_settings_notification_info">Define the behaviour of the app on incoming messages.
        These settings are used for the whole app. You may override this settings for individual channels and groups.
        </string>
    <string name="activity_settings_notification_rb_all">Announce all incoming messages</string>
    <string name="activity_settings_notification_rb_priority">Announce high priority messages only.</string>
    <string name="activity_settings_notification_rb_none">Announce no incoming messages.</string>
    <string name="activity_settings_notification_rb_general">Use general announcement settings</string>
    <string name="activity_settings_list_channel_info_title">Channel settings</string>
    <string name="activity_settings_list_channel_info">Choose the arrangement criterion for channel lists here.</string>
    <string name="activity_settings_list_rb_channel_alphabetical">Alphabetical</string>
    <string name="activity_settings_list_rb_channel_type">Channel type and faculty</string>
    <string name="activity_settings_list_rb_channel_messages">Number of unread messages</string>
    <string name="activity_settings_list_group_info_title">Group settings</string>
    <string name="activity_settings_list_group_info">Choose the arrangement criterion for group lists here.</string>
    <string name="activity_settings_list_rb_group_alphabetical">Alphabetical</string>
    <string name="activity_settings_list_rb_group_messages">Number of unread messages</string>
    <string name="activity_settings_list_messages_info_title">Messages settings</string>
    <string name="activity_settings_list_messages_info">Choose the arrangement criterion for all message
         lists like channel messages and conversation messages.</string>
    <string name="activity_settings_list_rb_messages_asc">Latest message at the top</string>
    <string name="activity_settings_list_rb_messages_desc">Latest message at the bottom</string>
    <string name="activity_main_group_menu_settings">Settings</string>
    <string name="activity_main_group_menu_search">Search group</string>
    <string name="activity_main_group_menu_add">Add group</string>
    <string name="activity_main_nav_settings">Settings</string>
    <string name="activity_main_nav_about">About</string>
    <string name="activity_main_nav_moderator">Moderator</string>
    <string name="activity_main_nav_login">Login</string>
    <string name="activity_reminder_add_info">Configure a reminder, which sends messages automatically at a specified
        interval. All shown fields are mandatory.</string>
    <string name="activity_reminder_add_select_date">Click to select date</string>
    <string name="activity_reminder_add_select_time">Click to select time</string>
    <string name="activity_reminder_add_ignore_flag">Skip next reminder message</string>
    <string name="message_priority">Priority</string>
    <string name="reminder_start_date">Start date</string>
    <string name="reminder_end_date">End date</string>
    <string name="reminder_next_date_info">Next reminder message</string>
    <string name="reminder_time">Time</string>
    <string name="reminder_interval">Interval</string>
    <string name="reminder_interval_once">Single event</string>
    <string name="reminder_deactivate">Deactivate</string>
    <string name="reminder_activate">Activate</string>
    <string name="group_type">Group type</string>
</resources>