<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/activity_conversation_menu_edit"
          android:title="@string/general_edit"
          android:icon="@drawable/ic_create_white_24dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/activity_conversation_menu_close"
          android:title="@string/general_close"
          android:icon="@drawable/ic_lock_white_24dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/activity_conversation_menu_open"
          android:title="@string/general_open"
          android:icon="@drawable/ic_lock_open_white_24dp"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/activity_conversation_menu_delete"
          android:title="@string/general_delete"
          android:icon="@drawable/ic_remove_circle_white_24dp"
          app:showAsAction="ifRoom"/>
</menu>