<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/activity_moderator_reminder_detail_edit"
    android:icon="@drawable/ic_create_white_24dp"
    android:orderInCategory="100"
    android:title="@string/general_edit"
    app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/activity_moderator_reminder_detail_deactivate"
        android:icon="@drawable/ic_alarm_off_white_24dp"
        android:orderInCategory="100"
        android:title="@string/reminder_deactivate"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/activity_moderator_reminder_detail_activate"
        android:icon="@drawable/ic_alarm_on_white_24dp"
        android:orderInCategory="100"
        android:title="@string/reminder_activate"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/activity_moderator_reminder_detail_delete"
        android:icon="@drawable/ic_remove_circle_white_24dp"
        android:orderInCategory="100"
        android:title="@string/general_delete"
        app:showAsAction="ifRoom"/>
</menu>
