<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_settings_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:scrollbars="vertical"
                android:text="@string/activity_settings_list_channel_info_title"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:scrollbars="vertical"
                android:text="@string/activity_settings_list_channel_info"/>

            <RadioGroup
                android:id="@+id/activity_settings_list_rg_settings_channel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/activity_settings_list_rb_channel_alphabetical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_settings_list_rb_channel_alphabetical"/>

                <RadioButton
                    android:id="@+id/activity_settings_list_rb_channel_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_settings_list_rb_channel_type"/>

                <RadioButton
                    android:id="@+id/activity_settings_list_rb_channel_messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_settings_list_rb_channel_messages"/>
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:scrollbars="vertical"
                android:text="@string/activity_settings_list_group_info_title"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:scrollbars="vertical"
                android:text="@string/activity_settings_list_group_info"/>

            <RadioGroup
                android:id="@+id/activity_settings_list_rg_settings_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/activity_settings_list_rb_group_alphabetical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_settings_list_rb_group_alphabetical"/>

                <RadioButton
                    android:id="@+id/activity_settings_list_rb_group_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_type"/>

                <RadioButton
                    android:id="@+id/activity_settings_list_rb_group_messages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_settings_list_rb_group_messages"/>
            </RadioGroup>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:scrollbars="vertical"
                android:text="@string/activity_settings_list_messages_info_title"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:scrollbars="vertical"
                android:text="@string/activity_settings_list_messages_info"/>

            <RadioGroup
                android:id="@+id/activity_settings_list_rg_settings_messages"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/activity_settings_list_rb_messages_asc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_settings_list_rb_messages_asc"/>

                <RadioButton
                    android:id="@+id/activity_settings_list_rb_messages_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_settings_list_rb_messages_desc"/>
            </RadioGroup>

        </LinearLayout>
    </ScrollView>
</LinearLayout>