<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#ffffff"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_reminder_add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/activity_channel_add_tv_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border_info"
                android:padding="10dp"
                android:text="@string/activity_reminder_add_info"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="12dp"
                android:text="@string/reminder_start_date"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_start_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="6dp"
                android:text="@string/activity_reminder_add_select_date"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="12dp"
                android:text="@string/reminder_end_date"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_end_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="6dp"
                android:text="@string/activity_reminder_add_select_date"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="12dp"
                android:text="@string/reminder_time"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_time_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="6dp"
                android:text="@string/activity_reminder_add_select_time"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="12dp"
                android:text="@string/reminder_interval"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_interval_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="6dp"
                android:text="@string/reminder_interval_once"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <CheckBox
                android:id="@+id/activity_reminder_add_chk_ignore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/activity_reminder_add_ignore_flag"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_next_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="12dp"
                android:text="@string/reminder_next_date_info"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_next_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="6dp"
                android:text="@string/general_dots"
                android:textColor="@color/black"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="6dp">

                <!--
                <ImageView
                    android:id="@+id/activity_reminder_add_iv_icon_title"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:paddingEnd="10dp"
                    android:paddingRight="10dp"
                    android:src="@drawable/ic_info_black_36dp"/>
                -->

                <ulm.university.news.app.util.TextInputLabels
                    android:id="@+id/activity_reminder_add_til_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <ulm.university.news.app.util.TextInputLabels
                android:id="@+id/activity_reminder_add_til_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:paddingTop="8dp"
                android:text="@string/message_priority"/>

            <Spinner
                android:id="@+id/activity_reminder_add_sp_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/activity_reminder_add_tv_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/border_error"
                android:padding="10dp"
                android:visibility="gone"/>

            <ProgressBar
                android:id="@+id/activity_reminder_add_pgr_adding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/activity_reminder_add_btn_create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/general_create"
                android:textColor="@color/black"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>